# cpp_2025

functions_lib/: CMakeLists.txt  a.out  functions.cpp  functions.h  gradient.cpp  gradient.h  main.cpp  operators.cpp  operators.h  tests.cpp
mafia/: GameMaster.cpp  Makefile  Share_ptr.cpp  main.cpp  roles.cpp
simulated_annealing/: 1_experiment  2_experiment  Cooling.h  Makefile  Mutation.h  Pipfile  SA  SimulatedAnnealing.h  Solution.h  generate_jobs.cpp  heatmap_data.csv  heavy_data.txt  jobs.csv  load_CSV.cpp  main.cpp  main_1_exp.cpp  main_2_exp.cpp  parallel_scaling.csv  plots.py
simulated_annealing/problem_statement/: problem.txt
